welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:25: error: not found: value baiseBrosse
    baiseBrosse(); leveBrosse()
    ^